--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,11 +21,15 @@ jobs:
         ruby-version: ${{ matrix.ruby }}
 
     - name: Install dependencies
+      env:
+        BUNDLE_GEMFILE: GemfileCI
       run: |
         bundle config path vendor/bundle
         bundle install --binstubs --jobs 4 --retry 3
 
     - name: Run tests
+      env:
+        BUNDLE_GEMFILE: GemfileCI
       run: |
         bundle exec rake
 
